[package]
name = "stealth_tunnel"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
h2 = "0.4"
http = "1.0"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
quinn = "0.11"
boring = "4.22.0"
tokio-boring = "4.22.0"
rustls-pemfile = "2.1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webpki-roots = "1.0"
socket2 = "0.6"
hmac = "0.12"
rcgen = "0.13"
crossbeam-queue = "0.3"
lazy_static = "1.4"
