[package]
name = "GhostRPC"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
futures = "0.3"
tokio-util = "0.7.14"
h2 = "0.4.8"
http = "1.3.1"
rustls = { version = "0.23.25", features = ["ring"] }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.0"
bytes = "1.10.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "ansi"] }
webpki-roots = "1.0.1"
socket2 = "0.6.1"
mimalloc = "0.1.44"
libc = "0.2.172"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
instant-acme = "0.6.1"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
